--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@glidejs/glide": "^3.4.1",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.0-beta3"
   },
